release: bump version to 0.30.0